# Team_Project_FastAPI

./: .gitignore  README.md
PhotoShare/: .env.example  main.py  pyproject.toml  schemas.py
PhotoShare/src/conf/: config.py
PhotoShare/src/database/: models.py
PhotoShare/src/repository/: admin.py  comments.py  public.py  shares.py  tags.py  users.py
PhotoShare/src/routes/: admin.py  auth.py  comments.py  public.py  shares.py  users.py
PhotoShare/src/services/: auth.py  email.py
PhotoShare/src/services/templates/: email_template.html
